tetrate/check-compliance-policy/check-compliance-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-istiod-fips-compliance
  annotations:
    policies.kyverno.io/title: "Ensure Istiod Compliance Policy"
    policies.kyverno.io/category: "Security"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/subject: "Deployment"
    policies.kyverno.io/description: "Ensures that Istiod deployments have COMPLIANCE_POLICY=fips-140-2 set in the environment variables."
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-compliance-policy
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - istio-system
      validate:
        message: "Istiod containers must have COMPLIANCE_POLICY=fips-140-2 set in their environment variables."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - name: discovery
                    env:
                      - name: COMPLIANCE_POLICY
                        value: fips-140-2
